[gd_scene load_steps=2 format=3 uid="uid://cw0hiauglrret"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_an6tx"]

[node name="PauseMenu" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(200, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an6tx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
text = "Resume"

[node name="offset" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2

[node name="Settings" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
text = "Settings"

[node name="offset2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
